fixed iso layout issue with reload

--- a/app/assets/stylesheets/isotope.css
+++ b/app/assets/stylesheets/isotope.css
@@ -118,8 +118,8 @@ body {
 
 .post .post-caption {
   left: 0.2em;
-  top: 0.4em;
-  font-size: 1.2em;
+  top: 0.3em;
+  font-size: 1.0em;
   line-height: 1.0em;
   color: #FFF;
 }
@@ -171,7 +171,7 @@ body {
   width: 250px;
   margin: 5px;
   float: left;
-  padding-top:50px;
+  padding-top:60px;
   padding-left:20px;
 
 
@@ -204,7 +204,7 @@ body {
 .post.large,
 .variable-sizes .post.large,
 .variable-sizes .post.large.width2.height2 {
-  font-size: 3.0em;
+  font-size: 1.2em;
   width: 350px;
   height: 350px;
   z-index: 100;
